--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body {
 
 .navbar {
   transition: all 0.3s ease;
+ 
 }
 
 .logo {
@@ -56,7 +57,8 @@ body {
 
 .logo img {
   height: 40px;
-  animation: rotate 20s linear infinite;
+ 
+
 }
 
 .logo h1 {
@@ -65,6 +67,8 @@ body {
   animation: fadeIn 1s ease;
   white-space: nowrap;
   overflow: hidden;
+  text-overflow: ellipsis;
+  margin-right: 4rem;  
 }
 
 .nav-links {
@@ -549,6 +553,11 @@ text-align: center;
   .hamburger {
     display: block;
   }
+
+  .navbar {
+    padding: 1rem;
+  }
+
 
   .nav-links {
     position: fixed;
