--- a/styles.css
+++ b/styles.css
@@ -589,13 +589,17 @@ text-align: center;
     white-space: wrap;
   }
   h1{
-    white-space: no-wrap;
-
+    white-space:wrap;
+    max-width: fit-content;
+    
+  }
+  .home-content p {
+    font-size: 1rem;
   }
 
   .highlight{
     margin-top: 10px;
-    font-size: larger;
+    font-size: large;
   }
   .e-file{
     margin-left: 20px;
@@ -643,10 +647,10 @@ text-align: center;
   }
   .checklist-header{
     text-align: start;
-
+  white-space-collapse: collapse;
   }
   .important-notice{
-   max-width: 400px;
+   max-width: 300px;
    
   }
 }
